Revision history for {{$dist->name}}

{{$NEXT}}

0.910     2019-02-10 17:52:24-08:00 America/Los_Angeles
  - Added a new attribute auto_trim and have four different values for it
  - Added a method line_auto_manip that can be overridden in subclasses
  - Enabled rw accessors for multiline_type and auto_chomp attributes
  - Edited SpiceParser-3.t and Text-Parser.t to accommodate test changes

0.903     2019-02-08 20:21:31-08:00 America/Los_Angeles
  - Reduce redundate Moose types, improve code coverage

0.902     2019-02-07 22:24:40-08:00 America/Los_Angeles
  - Namespace all types inside Text::Parser class.

0.901     2019-02-07 22:00:59-08:00 America/Los_Angeles
  - Fix issues with FreeBSD

0.900     2019-02-06 20:43:40-08:00 America/Los_Angeles
  - Changed implementation to be Moose-based, so that Moose users can easily use this class.
  - Deprecated setting method, added two new methods instead: multiline_type, auto_chomp
  - Added a new method push_records. Save records internally calls push_records.
  - Added tests for all methods. Updated POD.

0.803     2019-01-21 15:49:03-08:00 America/Los_Angeles
  - Cleaned up code using tidyall ; perlcritic warnings fixed

0.802     2019-01-15 23:58:56-08:00 America/Los_Angeles
  - Fixed copyright year. Corrected Bug tracker link. Made POD brief and readable.

0.801     2019-01-14 19:40:50-08:00 America/Los_Angeles
  - Improved documentation

0.800     2019-01-14 12:28:23-08:00 America/Los_Angeles
  - Added auto_chomp and multiline_type options in object constructor
  - Added multi-line parser role with Text::Parser::Multiline
  - Added tests and improved code coverage

0.753     2019-01-04 21:38:06-08:00 America/Los_Angeles
  - Skip tests of unreadable files for MSWin32.
  - A safer CSV example in Example 1 & 2. Added tests based on that.
  - Grammatical/typo fixes in POD.

0.752     2019-01-02 20:25:16-08:00 America/Los_Angeles
  - One test fails for superuser. Fixing that.